--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
     "express": "^5.2.1",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "6.22.3",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/nodemailer": "^7.0.4",
+    "@types/quill": "^2.0.14",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
