--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemailer": "^7.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-quill": "^2.0.0",
     "react-router-dom": "6.22.3",
     "sqlite": "^5.1.1",
