feat: Implement robust multi-environment configuration for client and server with dedicated .env files, updated scripts, and a health check endpoint.

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,82 @@
+# =============================================================================
+# ENVIRONMENT CONFIGURATION TEMPLATE
+# =============================================================================
+# This is a template file. DO NOT use this directly in production.
+# Copy this to .env.development, .env.stage, or .env.production
+# and configure values according to your environment.
+#
+# For local development overrides, create .env.local (not committed to git)
+# =============================================================================
+
+# -----------------------------------------------------------------------------
 # Server Configuration
+# -----------------------------------------------------------------------------
 PORT=3001
 NODE_ENV=development
 
-# Security
+# -----------------------------------------------------------------------------
+# Database Configuration
+# -----------------------------------------------------------------------------
+# SQLite database file path - different for each environment
+# Development:  server/db/dev.db
+# Staging:      server/db/stage.db
+# Production:   server/db/prod.db
+DB_PATH=server/db/dev.db
+
+# -----------------------------------------------------------------------------
+# Security Configuration
+# -----------------------------------------------------------------------------
+# JWT Secret for token signing - MUST be different for each environment
+# Generate using: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 JWT_SECRET=REPLACE_WITH_RANDOM_64_CHAR_HEX_STRING
+
+# Admin Password Hash - Generate using: node server/generate-password-hash.cjs yourpassword
+# Use different passwords for each environment
 ADMIN_PASSWORD_HASH=your-bcrypt-hashed-password-here
 
+# -----------------------------------------------------------------------------
 # CORS Configuration
-# Frontend runs on 3000, backend on 3001
+# -----------------------------------------------------------------------------
+# Comma-separated list of allowed origins
+# Development:  http://localhost:3000,http://localhost:5173,http://localhost:3001
+# Staging:      https://stage.ionet.com.tr
+# Production:   https://www.ionet.com.tr,https://ionet.com.tr
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:3001
 
-# File Upload
-UPLOAD_DIR=server/uploads/
+# -----------------------------------------------------------------------------
+# Frontend Configuration (Vite)
+# -----------------------------------------------------------------------------
+# Base path for the application
+# Development:  /
+# Staging:      /ionet-web
+# Production:   /ionet-web
+VITE_BASE_PATH=/
+
+# API URL for frontend to connect to backend
+# Development:  http://localhost:3001
+# Staging:      https://stage.ionet.com.tr
+# Production:   https://www.ionet.com.tr
+VITE_API_URL=http://localhost:3001
+
+# Environment name for display (optional)
+# Values: development, staging, production
+VITE_APP_ENV=development
+
+# -----------------------------------------------------------------------------
+# File Upload Configuration
+# -----------------------------------------------------------------------------
+# Upload directory - different for each environment to isolate files
+# Development:  server/uploads/dev
+# Staging:      server/uploads/stage
+# Production:   server/uploads/prod
+UPLOAD_DIR=server/uploads/dev
+
+# Maximum file size in bytes (default: 52428800 = 50MB)
 MAX_FILE_SIZE=52428800
 
-# Email Configuration (Optional - can be managed via admin panel)
+# -----------------------------------------------------------------------------
+# Email Configuration (Optional)
+# -----------------------------------------------------------------------------
 # These settings are used as fallback if not configured in the database
 # Email settings can be managed through the admin panel under Site Settings
 SMTP_HOST=smtp.ethereal.email
