--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ dist-ssr
 
 # Environment variables
 .env
+.env.local
+.env.*.local
+
+# Database files (each environment has its own)
+server/db/
+server/database.sqlite
 
 # Editor directories and files
 .vscode/*
