--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"node server/index.cjs\" \"vite\"",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "concurrently \"NODE_ENV=development node server/index.cjs\" \"vite --mode development\"",
+    "dev:stage": "concurrently \"NODE_ENV=staging node server/index.cjs\" \"vite --mode stage\"",
+    "dev:prod": "concurrently \"NODE_ENV=production node server/index.cjs\" \"vite --mode production\"",
+    "build": "vite build --mode production",
+    "build:dev": "vite build --mode development",
+    "build:stage": "vite build --mode stage",
+    "build:prod": "vite build --mode production",
+    "preview": "vite preview --mode production",
+    "preview:stage": "vite preview --mode stage",
+    "type-check": "tsc --noEmit",
+    "lint": "npm run type-check"
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
