feat: Add Dockerization for production and staging environments, including Dockerfiles, Compose configurations, and a Coolify deployment guide.

--- a/.env.stage
+++ b/.env.stage
@@ -14,11 +14,11 @@ ADMIN_PASSWORD_HASH=REPLACE_WITH_STAGING_ADMIN_PASSWORD_HASH
 
 # CORS Configuration
 # Replace with your actual staging domain
-ALLOWED_ORIGINS=https://stage.ionet.com.tr,https://staging.ionet.com.tr
+ALLOWED_ORIGINS=https://your-staging-domain.com
 
 # Frontend Configuration (Vite)
 VITE_BASE_PATH=/ionet-web
-VITE_API_URL=https://stage.ionet.com.tr
+VITE_API_URL=https://your-staging-domain.com
 VITE_APP_ENV=staging
 
 # File Upload
@@ -29,7 +29,7 @@ MAX_FILE_SIZE=52428800
 SMTP_HOST=smtp.example.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=staging@ionet.com.tr
+SMTP_USER=staging@your-domain.com
 SMTP_PASS=REPLACE_WITH_STAGING_SMTP_PASSWORD
-MAIL_FROM=contact@ionet.com.tr
-MAIL_TO=admin@ionet.com.tr
+MAIL_FROM=noreply@your-domain.com
+MAIL_TO=admin@your-domain.com
