--- a/.env.example
+++ b/.env.example
@@ -39,8 +39,8 @@ ADMIN_PASSWORD_HASH=your-bcrypt-hashed-password-here
 # -----------------------------------------------------------------------------
 # Comma-separated list of allowed origins
 # Development:  http://localhost:3000,http://localhost:5173,http://localhost:3001
-# Staging:      https://stage.ionet.com.tr
-# Production:   https://www.ionet.com.tr,https://ionet.com.tr
+# Staging:      https://your-staging-domain.com
+# Production:   https://your-domain.com,https://www.your-domain.com
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:3001
 
 # -----------------------------------------------------------------------------
@@ -54,8 +54,8 @@ VITE_BASE_PATH=/
 
 # API URL for frontend to connect to backend
 # Development:  http://localhost:3001
-# Staging:      https://stage.ionet.com.tr
-# Production:   https://www.ionet.com.tr
+# Staging:      https://your-staging-domain.com
+# Production:   https://your-domain.com
 VITE_API_URL=http://localhost:3001
 
 # Environment name for display (optional)
@@ -84,5 +84,5 @@ SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=your-ethereal-email@ethereal.email
 SMTP_PASS=your-ethereal-password
-MAIL_FROM=contact@ionet.com.tr
-MAIL_TO=admin@ionet.com.tr
+MAIL_FROM=noreply@your-domain.com
+MAIL_TO=admin@your-domain.com
