--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
 
     # Health check
     healthcheck:
-      test: [ "CMD", "node", "-e", "require('http').get('https://localhost:3001/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})" ]
+      test: [ "CMD", "node", "-e", "require('http').get('http://localhost:3001/v1/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})" ]
       interval: 30s
       timeout: 10s
       retries: 3
