feat: Enable and configure service health check in docker-compose.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,11 @@ services:
 
     # Health check
     healthcheck:
-      disable: true
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://127.0.0.1:3001/ || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
     # Logging
     logging:
