--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,38 +11,23 @@ services:
         VITE_API_URL: ${VITE_API_URL}
         VITE_APP_ENV: ${VITE_APP_ENV}
 
-    container_name: ionet-web
     restart: unless-stopped
 
-    ports:
-      - "${PORT:-3001}:3001"
-
+    # Veri kalıcılığı için
     volumes:
       - app-db:/app/server/db
       - app-uploads:/app/server/uploads
 
+    # Sağlık kontrolü (Bunu tutuyoruz çünkü çalıştığını teyit ettik)
     healthcheck:
-      test: [ "CMD-SHELL", "node -e \"require('http').get('http://localhost:3001/v1/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})\"" ]
-      interval: 30s
-      timeout: 10s
+      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://127.0.0.1:3001/ || exit 1" ]
+      interval: 10s
+      timeout: 5s
       retries: 3
-      start_period: 40s
-
-    logging:
-      driver: json-file
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-    networks:
-      - app-network
+      start_period: 10s
 
 volumes:
   app-db:
     driver: local
   app-uploads:
     driver: local
-
-networks:
-  app-network:
-    driver: bridge
