--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,21 +13,17 @@ services:
 
     restart: unless-stopped
 
-    # Veri kalıcılığı için
     volumes:
       - app-db:/app/server/db
       - app-uploads:/app/server/uploads
 
-    # Sağlık kontrolü (Bunu tutuyoruz çünkü çalıştığını teyit ettik)
     healthcheck:
-      test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://127.0.0.1:3001/ || exit 1" ]
-      interval: 10s
-      timeout: 5s
+      test: [ "CMD-SHELL", "node -e \"require('http').get('http://localhost:3001/v1/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})\"" ]
+      interval: 30s
+      timeout: 10s
       retries: 3
-      start_period: 10s
+      start_period: 40s
 
 volumes:
   app-db:
-    driver: local
   app-uploads:
-    driver: local
