--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,63 +1,42 @@
 version: '3.8'
 
 services:
-  ionet-web:
+  app:
     build:
       context: .
-      dockerfile: Dockerfile
       args:
-        # Set BUILD_ENV based on your deployment (stage or production)
-        BUILD_ENV: ${BUILD_ENV:-production}
-        # Pass Vite environment variables to build
         VITE_BASE_PATH: ${VITE_BASE_PATH:-/}
         VITE_API_URL: ${VITE_API_URL}
-        VITE_APP_ENV: ${VITE_APP_ENV}
+        VITE_APP_ENV: ${VITE_APP_ENV:-staging}
 
-    container_name: ionet-web
     restart: unless-stopped
 
-    # Port mapping
+    environment:
+      - NODE_ENV=${NODE_ENV:-staging}
+      - PORT=${PORT:-3001}
+      - DB_PATH=${DB_PATH:-server/db/stage.db}
+      - UPLOAD_DIR=${UPLOAD_DIR:-server/uploads/stage}
+      - JWT_SECRET=${JWT_SECRET}
+      - ADMIN_PASSWORD_HASH=${ADMIN_PASSWORD_HASH}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS}
+      - SITE_URL=${SITE_URL}
+      - MAIL_TO=${MAIL_TO:-admin@example.com}
+      - MAIL_FROM=${MAIL_FROM:-noreply@example.com}
+
+    volumes:
+      - db-data:/app/server/db
+      - uploads-data:/app/server/uploads
+
     ports:
       - "${PORT:-3001}:3001"
 
-    # Environment variables are set directly in Coolify UI
-    # or passed via docker run -e flags
-    # No .env file needed in container
-
-    # Volume mounts for persistence
-    volumes:
-      # Database persistence
-      - app-db:/app/server/db
-      # Upload files persistence
-      - app-uploads:/app/server/uploads
-
-    # Health check
     healthcheck:
-      test: [ "CMD", "node", "-e", "require('http').get('http://localhost:3001/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})" ]
+      test: [ "CMD-SHELL", "node -e \"require('http').get('http://localhost:3001/v1/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})\"" ]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
 
-    # Logging
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-    # Network
-    networks:
-      - app-network
-
-# Volumes for data persistence
 volumes:
-  app-db:
-    driver: local
-  app-uploads:
-    driver: local
-
-# Networks
-networks:
-  app-network:
-    driver: bridge
+  db-data:
+  uploads-data:
