--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "file-type": "^16.5.4",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
