--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sqlite3": "^5.1.7",
     "uuid": "^13.0.0",
     "validator": "^13.15.26",
+    "winston": "^3.11.0",
     "xss": "^1.0.15"
   },
   "devDependencies": {
