feat: Migrate application to root path and refactor authentication to use cookie-based sessions.

--- a/.apache/000-default.conf
+++ b/.apache/000-default.conf
@@ -14,12 +14,12 @@
 ProxyPreserveHost On
 
 # I/ONET Web API Proxy - ProxyPassMatch kullan (Alias'ı bypass eder)
-ProxyPassMatch ^/ionet-web/api/(.*)$ http://localhost:3001/ionet-web/api/$1
-ProxyPassReverse /ionet-web/api http://localhost:3001/ionet-web/api
+ProxyPassMatch ^//api/(.*)$ http://localhost:3001//api/$1
+ProxyPassReverse //api http://localhost:3001//api
 
 # I/ONET Web Uploads Proxy
-ProxyPassMatch ^/ionet-web/uploads/(.*)$ http://localhost:3001/ionet-web/uploads/$1
-ProxyPassReverse /ionet-web/uploads http://localhost:3001/ionet-web/uploads
+ProxyPassMatch ^//uploads/(.*)$ http://localhost:3001//uploads/$1
+ProxyPassReverse //uploads http://localhost:3001//uploads
 
 # ========================================================================
 # React Applications
@@ -53,18 +53,18 @@ Alias /destekportali "/var/www/destekportali/frontend/dist"
 
 
 # React Uygulaması: ionet-web
-# Url Path: /ionet-web
+# Url Path: /
 
-Alias /ionet-web "/var/www/ionet-web/dist"
+Alias / "/var/www//dist"
 
-<Directory "/var/www/ionet-web/dist">
+<Directory "/var/www//dist">
     Options Indexes FollowSymLinks
     AllowOverride All
     Require all granted
 
     <IfModule mod_rewrite.c>
         RewriteEngine On
-        RewriteBase /ionet-web/
+        RewriteBase //
 
         # index.html ise işlem yapma
         RewriteRule ^index\.html$ - [L]
@@ -74,8 +74,8 @@ Alias /ionet-web "/var/www/ionet-web/dist"
         RewriteCond %{REQUEST_FILENAME} !-d
 
         # CRITICAL: API ve uploads isteklerini EXCLUDE et (yukarıda proxy ediliyor)
-        RewriteCond %{REQUEST_URI} !^/ionet-web/api/
-        RewriteCond %{REQUEST_URI} !^/ionet-web/uploads/
+        RewriteCond %{REQUEST_URI} !^//api/
+        RewriteCond %{REQUEST_URI} !^//uploads/
 
         # Yoksa index.html'e yönlendir (SPA Routing)
         RewriteRule . index.html [L]
