--- a/.apache/ionet-stage.conf
+++ b/.apache/ionet-stage.conf
@@ -2,7 +2,7 @@
     ServerName stage.ionet.com.tr
     ServerAlias staging.ionet.com.tr
     
-    DocumentRoot /var/www/ionet-web/dist
+    DocumentRoot /var/www//dist
     
     # Logging
     ErrorLog ${APACHE_LOG_DIR}/ionet-stage-error.log
@@ -11,33 +11,33 @@
     # CRITICAL: API requests MUST be proxied to backend BEFORE any rewrite rules
     # This prevents API requests from being rewritten to index.html
     ProxyPreserveHost On
-    ProxyPass /ionet-web/api http://localhost:3001/ionet-web/api
-    ProxyPassReverse /ionet-web/api http://localhost:3001/ionet-web/api
+    ProxyPass //api http://localhost:3001//api
+    ProxyPassReverse //api http://localhost:3001//api
     
     # Uploads directory
-    ProxyPass /ionet-web/uploads http://localhost:3001/ionet-web/uploads
-    ProxyPassReverse /ionet-web/uploads http://localhost:3001/ionet-web/uploads
+    ProxyPass //uploads http://localhost:3001//uploads
+    ProxyPassReverse //uploads http://localhost:3001//uploads
     
     # Frontend static files
-    <Directory "/var/www/ionet-web/dist">
+    <Directory "/var/www//dist">
         Options -Indexes +FollowSymLinks
         AllowOverride All
         Require all granted
         
         # Enable Apache rewrite module
         RewriteEngine On
-        RewriteBase /ionet-web
+        RewriteBase /
         
         # Don't rewrite files or directories that exist
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteCond %{REQUEST_FILENAME} !-d
         
         # CRITICAL: Don't rewrite API requests - they should be proxied above
-        RewriteCond %{REQUEST_URI} !^/ionet-web/api/
-        RewriteCond %{REQUEST_URI} !^/ionet-web/uploads/
+        RewriteCond %{REQUEST_URI} !^//api/
+        RewriteCond %{REQUEST_URI} !^//uploads/
         
         # All other requests go to index.html (SPA routing)
-        RewriteRule ^ /ionet-web/index.html [L]
+        RewriteRule ^ //index.html [L]
     </Directory>
     
     # Security headers
@@ -57,7 +57,7 @@
 #     ServerName stage.ionet.com.tr
 #     ServerAlias staging.ionet.com.tr
 #     
-#     DocumentRoot /var/www/ionet-web/dist
+#     DocumentRoot /var/www//dist
 #     
 #     SSLEngine on
 #     SSLCertificateFile /etc/letsencrypt/live/stage.ionet.com.tr/fullchain.pem
