--- a/.env.example
+++ b/.env.example
@@ -48,8 +48,8 @@ ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:300
 # -----------------------------------------------------------------------------
 # Base path for the application
 # Development:  /
-# Staging:      /ionet-web
-# Production:   /ionet-web
+# Staging:      /
+# Production:   /
 VITE_BASE_PATH=/
 
 # API URL for frontend to connect to backend
