--- a/.env.production
+++ b/.env.production
@@ -17,7 +17,7 @@ ADMIN_PASSWORD_HASH=$2b$10$5s/vsdNpFqwq78.b7GEZeeQv1Q.5GfhOig0ax9VpVg5HgzkydlPUK
 ALLOWED_ORIGINS=https://your-domain.com,https://www.your-domain.com
 
 # Frontend Configuration (Vite)
-VITE_BASE_PATH=/ionet-web
+VITE_BASE_PATH=/
 VITE_API_URL=https://your-domain.com
 VITE_APP_ENV=production
 
