--- a/.env.stage
+++ b/.env.stage
@@ -17,7 +17,7 @@ ADMIN_PASSWORD_HASH=REPLACE_WITH_STAGING_ADMIN_PASSWORD_HASH
 ALLOWED_ORIGINS=https://your-staging-domain.com
 
 # Frontend Configuration (Vite)
-VITE_BASE_PATH=/ionet-web
+VITE_BASE_PATH=/
 VITE_API_URL=https://your-staging-domain.com
 VITE_APP_ENV=staging
 
