--- a/.htaccess
+++ b/.htaccess
@@ -5,5 +5,5 @@
     # This forwards all requests to the Node.js server running on port 3001
     # Ensure Apache mod_proxy and mod_proxy_http are enabled
     
-    RewriteRule ^(.*)$ http://127.0.0.1:3001/ionet-web/$1 [P,L]
+    RewriteRule ^(.*)$ http://127.0.0.1:3001//$1 [P,L]
 </IfModule>
