fix: Normalize paths by removing redundant double slashes in Vite and server configurations.

--- a/.apache/ionet-stage.conf
+++ b/.apache/ionet-stage.conf
@@ -2,7 +2,7 @@
     ServerName stage.ionet.com.tr
     ServerAlias staging.ionet.com.tr
     
-    DocumentRoot /var/www//dist
+    DocumentRoot /var/www/dist
     
     # Logging
     ErrorLog ${APACHE_LOG_DIR}/ionet-stage-error.log
@@ -11,15 +11,15 @@
     # CRITICAL: API requests MUST be proxied to backend BEFORE any rewrite rules
     # This prevents API requests from being rewritten to index.html
     ProxyPreserveHost On
-    ProxyPass //api http://localhost:3001//api
-    ProxyPassReverse //api http://localhost:3001//api
+    ProxyPass /api http://localhost:3001/api
+    ProxyPassReverse /api http://localhost:3001/api
     
     # Uploads directory
-    ProxyPass //uploads http://localhost:3001//uploads
-    ProxyPassReverse //uploads http://localhost:3001//uploads
+    ProxyPass /uploads http://localhost:3001/uploads
+    ProxyPassReverse /uploads http://localhost:3001/uploads
     
     # Frontend static files
-    <Directory "/var/www//dist">
+    <Directory "/var/www/dist">
         Options -Indexes +FollowSymLinks
         AllowOverride All
         Require all granted
@@ -33,11 +33,11 @@
         RewriteCond %{REQUEST_FILENAME} !-d
         
         # CRITICAL: Don't rewrite API requests - they should be proxied above
-        RewriteCond %{REQUEST_URI} !^//api/
-        RewriteCond %{REQUEST_URI} !^//uploads/
+        RewriteCond %{REQUEST_URI} !^/api/
+        RewriteCond %{REQUEST_URI} !^/uploads/
         
         # All other requests go to index.html (SPA routing)
-        RewriteRule ^ //index.html [L]
+        RewriteRule ^ /index.html [L]
     </Directory>
     
     # Security headers
@@ -57,7 +57,7 @@
 #     ServerName stage.ionet.com.tr
 #     ServerAlias staging.ionet.com.tr
 #     
-#     DocumentRoot /var/www//dist
+#     DocumentRoot /var/www/dist
 #     
 #     SSLEngine on
 #     SSLCertificateFile /etc/letsencrypt/live/stage.ionet.com.tr/fullchain.pem
