--- a/.nginx/ionet-stage.conf
+++ b/.nginx/ionet-stage.conf
@@ -4,7 +4,7 @@ server {
     
     server_name stage.ionet.com.tr staging.ionet.com.tr;
     
-    root /var/www//dist;
+    root /var/www/dist;
     index index.html;
     
     # Logging
@@ -13,7 +13,7 @@ server {
     
     # CRITICAL: API requests MUST be proxied to backend
     # This MUST come before the location block for static files
-    location //api/ {
+    location /api/ {
         proxy_pass http://localhost:3001;
         proxy_http_version 1.1;
         
@@ -37,7 +37,7 @@ server {
     }
     
     # Uploads directory (also proxied to backend)
-    location //uploads/ {
+    location /uploads/ {
         proxy_pass http://localhost:3001;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -46,8 +46,8 @@ server {
     }
     
     # Static files and SPA routing
-    location // {
-        try_files $uri $uri/ //index.html;
+    location / {
+        try_files $uri $uri/ /index.html;
         
         # Cache static assets
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
