refactor: Update API endpoint prefix from `/api` to `/v1` and enhance server proxy trust and cookie security.

--- a/.apache/ionet-stage.conf
+++ b/.apache/ionet-stage.conf
@@ -10,9 +10,10 @@
     
     # CRITICAL: API requests MUST be proxied to backend BEFORE any rewrite rules
     # This prevents API requests from being rewritten to index.html
+    # Frontend uses /v1 prefix for all API calls
     ProxyPreserveHost On
-    ProxyPass /api http://localhost:3001/api
-    ProxyPassReverse /api http://localhost:3001/api
+    ProxyPass /v1 http://localhost:3001/v1
+    ProxyPassReverse /v1 http://localhost:3001/v1
     
     # Uploads directory
     ProxyPass /uploads http://localhost:3001/uploads
@@ -33,7 +34,7 @@
         RewriteCond %{REQUEST_FILENAME} !-d
         
         # CRITICAL: Don't rewrite API requests - they should be proxied above
-        RewriteCond %{REQUEST_URI} !^/api/
+        RewriteCond %{REQUEST_URI} !^/v1/
         RewriteCond %{REQUEST_URI} !^/uploads/
         
         # All other requests go to index.html (SPA routing)
