--- a/.nginx/ionet-stage.conf
+++ b/.nginx/ionet-stage.conf
@@ -13,7 +13,8 @@ server {
     
     # CRITICAL: API requests MUST be proxied to backend
     # This MUST come before the location block for static files
-    location /api/ {
+    # Frontend uses /v1 prefix for all API calls
+    location /v1/ {
         proxy_pass http://localhost:3001;
         proxy_http_version 1.1;
         
