--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,10 @@ services:
 
     restart: unless-stopped
 
+    # Expose port for Dokploy reverse proxy
+    ports:
+      - "${PORT:-3001}:3001"
+
     environment:
       - NODE_ENV=${NODE_ENV:-staging}
       - PORT=${PORT:-3001}
@@ -26,6 +30,12 @@ services:
     volumes:
       - db-data:/app/server/db
       - uploads-data:/app/server/uploads
+
+    # Dokploy labels for traefik routing (if used)
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.ionet.rule=Host(`${SITE_URL}`)"
+      - "traefik.http.services.ionet.loadbalancer.server.port=3001"
 
     healthcheck:
       test: [ "CMD-SHELL", "node -e \"require('http').get('http://localhost:3001/v1/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})\"" ]
